7. MUDGrinder supports editing/deleting multiple rooms using cntrl-click.
8. New Jester skills: Satire, Quick Change, Center of Attention
9. New Oracle Prayers: Divine Guidance, Prophecy, Seekers Prayer, Soul Peering, Lower Law, Omnipresence, Above the Law
10.New Diviner Spells: Solve Maze, Group Status, Detect Weaknesses, Prying Eye, Telepathy, Natural Communion, Arms Length
   Spying Stone, Hear Thoughts, Know Fate, Divining Eye, Spotters Orders, Find Directions, Death Warning
11.Players can now use COMMANDS CLEAR to clear out their personal command queue.
12.Siplet should be back to 100%, or as close as the new tech will allow.
13.New Archon skill: Injure -- for creating instant injuries (useful for testing, or a nasty punishment).
# Build 5.7.6 Release ??/??/2012
1. New coffeemud.ini entries: COMMONCOST, SKILLCOST, LANGCOST.  Old entries, COMMONTRAINCOST, etc.. RETIRED.
2. (Internal) fakedb now supports dup key detection for insert statements, DBUpgrade now more forgiving of dup keys.
3. New command: AUTOMAP, for toggling AWARERANGE
4. Import command now Sortof supports at least one type of .wld/.zon/.mob/.obj format areas.
5. StdAutoGenInstance - Can now insert scriptable variables into autogen variable definitions, and more level variables. 
6. New Conjurer Spell: Flaming Sword
7. CoffeeMud now supports background colors through native ^ escape codes.  See programmer's guide/ahelp colors for more.
8. Also support for fore/background 256 color support through native ^ escape codes.  As above, check the guides.
9. Stuff: Shutdown command can now be put on an auto-remind timer, new sample js script FindRawMaterial, new internal property "Truce"
10.MODIFY AREA Can now modify areas outside of those areas, as well as change their state by adding PASSIVE, ACTIVE, etc.
11.NPC def hit point formula lowered slightly, some slight skill adjustments to decrease mage armor & increase thief dmg.
12.New Property: Prop_AddDamage (no, really this time)