@@ -93,6 +93,7 @@ public interface CMFlagLibrary extends CMLibrary
     public boolean isSwimmingInWater(Physical P);
     public boolean isFalling(Physical P);
     public boolean isBusy(Physical P);
+    public boolean isUnattackable(Physical P);
     public boolean canBeHeardMovingBy(Physical heard , MOB hearer);
     public boolean canBeHeardSpeakingBy(Physical heard , MOB hearer);
     public boolean canSenseMoving(Physical sensed, MOB sensor);
