@@ -2364,3 +2364,4 @@ ruthless programmer, and sentenced to a quick death.
 10.MODIFY AREA Can now modify areas outside of those areas, as well as change their state by adding PASSIVE, ACTIVE, etc.
 11.NPC def hit point formula lowered slightly, some slight skill adjustments to decrease mage armor & increase thief dmg.
 12.New Property: Prop_AddDamage (no, really this time)
+13.New disposition: Unattackable -- effectively deprecates Prop_SafePet
